# PyGreSQL

./: .buildinfo  .bumpversion.cfg  .clang-format  .flake8  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CNAME  GNUmakefile.in  LICENSE.txt  MANIFEST.in  PyGreSQL.spec  README.rst  about.html  announce.html  buildhtml.py  conn.c  copyright.html  genindex.html  index.html  internal.c  large.c  mkdocs  mktar  notice.c  objects.inv  pg.py  pgconn.c  pgdb.py  pgfs.h  pginternal.c  pglarge.c  pgmodule.c  pgnotice.c  pgquery.c  pgsource.c  pgtypes.h  py-modindex.html  py3c.h  (+9 more)
.devcontainer/: Dockerfile  dev.env  devcontainer.json  docker-compose.yml  provision.sh
.github/workflows/: docs.yml  lint.yml  release-docs  release-docs.yml  tests.yml
REL7_1_2/module/: GNUmakefile
REL7_1_BETA/module/: GNUmakefile
REL7_2_BETA3/module/: GNUmakefile
RELEASE_3_4/docs/: Announce  ChangeLog
RELEASE_3_4/module/: GNUmakefile  pgmodule.c  setup.py
RELEASE_3_4/web/: index.html
RELEASE_3_5/docs/: Announce  ChangeLog
RELEASE_3_5/web/: README.txt  index.html  stylesheet.css
RELEASE_3_6/: mktar
RELEASE_3_6/docs/: ChangeLog
RELEASE_3_6/module/: GNUmakefile  README  TEST_PyGreSQL_dbapi20.py  pg.py
RELEASE_3_6/web/: README.txt
RELEASE_3_7/: mktar
RELEASE_3_7/web/: index.html
RELEASE_3_7D/docs/: Announce  Announce.merge  future.txt  index.html  pg.txt  pgdb.txt  readme.txt
RELEASE_3_7D/module/: pgmodule.c  setup.py  test_pg.py
RELEASE_3_8/: mkdocs  mktar
RELEASE_3_8/docs/: announce.txt  changelog.txt  pg.txt
RELEASE_3_8/module/: pgmodule.c  setup.py  test_pg.py
RELEASE_3_8_1/docs/: announce.txt  changelog.txt  future.txt  index.html  pg.txt  readme.txt
RELEASE_3_8_1/module/: dbapi20.py  pg.py  pgdb.py  test_inserttable.py  test_pg.py
RELEASE_4_0/: buildhtml.py  mktar
RELEASE_4_0/docs/: readme.txt
RELEASE_4_0/module/: PyGreSQL.spec  Setup.in.raw  dbapi20.py  pg.py  test_inserttable.py
_sources/: about.rst.txt  announce.rst.txt  copyright.rst.txt
_sources/community/: index.rst.txt
_sources/contents/: changelog.rst.txt  general.rst.txt  install.rst.txt  tutorial.rst.txt
_sources/contents/pg/: adaptation.rst.txt  connection.rst.txt  db_types.rst.txt  db_wrapper.rst.txt  introduction.rst.txt  large_objects.rst.txt  module.rst.txt  notification.rst.txt  query.rst.txt
_sources/contents/pgdb/: connection.rst.txt  introduction.rst.txt  typecache.rst.txt  types.rst.txt
_sources/contents/postgres/: advanced.rst.txt  basic.rst.txt  func.rst.txt  syscat.rst.txt
_sources/download/: index.rst.txt
_static/: cloud.css  cloud.js  documentation_options.js
community/: index.html
contents/: changelog.html  examples.html  general.html  index.html  install.html  tutorial.html
contents/pg/: adaptation.html  connection.html  db_types.html  db_wrapper.html  index.html  introduction.html  large_objects.html  module.html  notification.html  query.html
contents/pgdb/: adaptation.html  connection.html  cursor.html  index.html  introduction.html  module.html  typecache.html  types.html
contents/postgres/: advanced.html  basic.html  func.html  index.html  syscat.html
docs/: Announce  Announce.merge  ChangeLog  Makefile  about.rst  about.txt  announce.rst  announce.txt  changelog.rst  changelog.txt  classic.rst  classic.txt  conf.py  copyright.rst  copyright.txt  db_api.rst  default.css  examples.txt  future.rst  future.txt  index.html  index.rst  install.rst  install.txt  interface.txt  introduction.rst  introduction.txt  mailinglist.txt  make.bat  pg.rst  pg.txt  pgdb.rst  readme.rst  readme.txt  requirements.txt  source.rst  svn.rst  svn.txt  toc.rst  viewvc.cgi
docs/community/: issues.rst  mailinglist.rst  source.rst  support.rst
docs/contents/: changelog.rst  examples.rst  general.rst  index.rst  install.rst  tutorial.rst
docs/contents/pg/: adaptation.rst  connection.rst  db_types.rst  (+6 more)
docs/download/: download.rst  files.rst
download/: index.html
ext/: pgconn.c  pginternal.c  pginternal.h  pglarge.c  pgmodule.c  pgmodule.h  pgnotice.c  pgquery.c  pgsource.c  pgtypes.h
module/: GNUmakefile  MANIFEST.in  README  TEST_PyGreSQL_classic.py  TEST_PyGreSQL_classic_connection.py  TEST_PyGreSQL_classic_dbwrapper.py  TEST_PyGreSQL_classic_functions.py  TEST_PyGreSQL_classic_largeobj.py  TEST_PyGreSQL_dbapi20.py  dbapi20.py  pg.py  pgdb.py  pgmodule.c  pgtypes.h  setup.cfg  setup.py  test_inserttable.py  test_pg.py
module/tests/: __init__.py  dbapi20.py  test_classic.py  test_classic_connection.py  test_classic_dbwrapper.py  test_classic_functions.py  test_classic_largeobj.py  test_dbapi20.py  test_dbapi20_copy.py
pg/: __init__.py  _pg.pyi  adapt.py  attrs.py  cast.py  core.py  db.py  error.py  helpers.py  notify.py  py.typed  tz.py
pgdb/: __init__.py  adapt.py  cast.py  connect.py  connection.py  constants.py  cursor.py  py.typed  typecode.py
tests/: __init__.py  config.py  dbapi20.py  test_classic.py  test_classic_attrdict.py  test_classic_connection.py  test_classic_dbwrapper.py  test_classic_functions.py  test_classic_largeobj.py  test_classic_notification.py  test_dbapi20.py  test_dbapi20_copy.py  test_tutorial.py
trunk/: Setup.in.raw  mkdocs  pgdb.py  setup.py
trunk/docs/: Makefile  requirements.txt  toc.txt
trunk/tests/: test_classic.py  test_classic_dbwrapper.py
tutorial/: advanced.py  basics.py
web/: README.txt  index.html  stylesheet.css
(+20 files in other folders)
