[project]
name = "PyGreSQL"
version = "6.0b1"
requires-python = ">=3.7"
authors = [
  {name = "D'Arcy J. M. Cain", email = "darcy@pygresql.org"},
  {name = "Christoph Zwerschke", email = "cito@online.de"},
]
description = "Python PostgreSQL interfaces"
readme = "README.rst"
keywords = ["pygresql", "postgresql", "database", "api", "dbapi"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: PostgreSQL License",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.license]
file = "LICENSE.txt"

[project.urls]
homepage = "https://pygresql.github.io/"
documentation = "https://pygresql.github.io/contents/"
source = "https://github.com/PyGreSQL/PyGreSQL"
issues = "https://github.com/PyGreSQL/PyGreSQL/issues/"
changelog = "https://pygresql.github.io/contents/changelog.html"
download = "https://pygresql.github.io/download/"
"mailing list" = "https://mail.vex.net/mailman/listinfo/pygresql"

[tool.ruff]
target-version = "py37"
line-length = 79
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "D",   # pydocstyle
  "B",   # bugbear
  "S",   # bandit
  "SIM", # simplify
  "RUF", # ruff
]
exclude = [
    "__pycache__",
    "__pypackages__",
    ".git",
    ".tox",
    ".venv",
    ".devcontainer",
    ".vscode",
    "docs",
    "build",
    "dist",
    "local",
    "venv",
]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D100", "D101", "D102", "D103", "D105", "D107", "S"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "tests.*"
]
disallow_untyped_defs = false

[tool.setuptools]
packages = ["pg", "pgdb"]
license-files = ["LICENSE.txt"]

[tool.setuptools.package-data]
pg = ["pg.typed"]
pgdb = ["pg.typed"]

[build-system]
requires = ["setuptools>=68", "wheel>=0.41"]
build-backend = "setuptools.build_meta"
